# site-checker

./: .env.example  .gitignore  CLAUDE.md  SETUP.md  example_usage.py  main.py  pyproject.toml  requirements.txt
src/agents/: __init__.py  site_analyzer.py
src/models/: __init__.py  site_analysis.py
src/services/: __init__.py  web_scraper.py
